--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -36,6 +36,9 @@ jobs:
     - name: Install dependencies
       run: npm ci
 
+    - name: Debug SSH Key
+    run: echo "${{ secrets.SSH_PRIVATE_KEY }}" | head -n 5
+
     - name: Build the project
       run: npm run build --if-present
 
