--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -46,6 +46,8 @@ jobs:
       run: |
         ssh -o StrictHostKeyChecking=no ubuntu@3.80.203.92 << 'EOF'
         cd /var/www/banhcuon/html
+        git fetch --all
+        git reset --hard origin/main  # Force reset to the latest commit on main
         git pull origin main
         npm install
         npm run build
